# rolfmadsen

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  backup.eslintrc.json  eslint.config.js  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
.github/workflows/: plantuml.yml
api/: search.rs  work.rs
api/openplatform/: requirements.txt  search.py
api/opensearch/search/: get_token.py  index copy.py  index.py  requirements.txt
components/: Footer.jsx  Header.jsx  Layout.jsx  LoadingIndicator.jsx  OpenplatformDkabm.jsx  Opensearch copy.jsx  Opensearch.jsx  OpensearchDkabm backup.jsx  OpensearchDkabm.jsx  OpensearchMarcxchange.jsx  OrderButton.jsx  Pagination.jsx  SearchForm.jsx  SearchResult.jsx  SearchResultDkabm.jsx  SearchResultItem.jsx  SearchResultMarcxchange.jsx  SearchResults.jsx  WelcomeMessage.jsx
docs/: functions_and_state.pu  functions_and_states.pu  rolfmadsendk.pu
pages/: _app.jsx  index.jsx  search.jsx
pages/openplatform/: index.jsx
pages/opensearch/marcxchange/: index.jsx
pages/opensearch/openplatformdkabm/: index.jsx
pages/service/openplatformdkabm/: index.jsx
pages/service/opensearchdkabm/: index.jsx
pages/service/opensearchmarcxchange/: index.jsx
pages/work/: [id].jsx
src/: lib.rs
src/modules/: mod.rs  search_utils.rs  utils.rs  work_utils.rs
styles/: globals.css
