[package]
name = "rolfmadsen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_derive = "1.0.147"
openssl = { version = "0.10.60", features = ["vendored"] }
scraper = "0.13.0"
gql_client = "1.0.7"
snailquote = "0.3.1"
vercel_runtime = "1.0.2"
hyper = "0.14"
now_lambda = "0.1.3"
lambda_http = "0.3"
thiserror = "1.0"
serde_qs = "0.7.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
dotenv = "0.15.0"

[[bin]]
name = "rust"
path = "api/search.rs"