[package]
name = "rolfmadsen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
openssl = { version = "0.10.61", features = ["vendored"] }
scraper = "0.18.1"
gql_client = "1.0.7"
snailquote = "0.3.1"
vercel_runtime = "1.1.0"
hyper = "1.0.1"
now_lambda = "0.1.3"
lambda_http = "0.8.3"
thiserror = "1.0.50"
serde_qs = "0.12.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
dotenv = "0.15.0"

[[bin]]
name = "rust"
path = "api/search.rs"