[package]
name = "rolfmadsen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
gql_client = "1.0.7"
vercel_runtime = "1.1.0"
# vercel_runtime = { version = "1.1.0", path = "../../crates/vercel_runtime" }
serde_qs = "0.12.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"

[[bin]]
name = "rust"
path = "api/search.rs"